--- a/Week 3 practice/css/style.css
+++ b/Week 3 practice/css/style.css
@@ -1,3 +1,6 @@
+*{
+	box-sizing: border-box;
+}
 body{
 	font-size: 15px;
 	font: #fff;
@@ -43,9 +46,16 @@ body{
 .navbar-nav{
 	margin: 0 5px;
 	font-size: 1.8em;
+	text-align: center;
+}
+.navbar-nav a span{
+	font-size: 23px;
+	text-decoration: none;
 }
 #phone{
 	margin-top: 5px;
+	font-size: 28px;
+	
 }
 #phone a{
 	text-align: right;
@@ -65,9 +75,85 @@ body{
 .nav-item a:hover{
 	background: #e7e7e7;
 }
+/*****HOME PAGE******/
+.container .jumbotron{
+		box-shadow: 0 0 50px #3f0c1f;
+		border: 2px solid #3f0c1f;
+}
+
+#menu-tile, #specials-tile, #map-tile{
+	height: 250px;
+	width: 100%;
+	margin-bottom: 15px;
+	position: relative;
+	border: 2px solid #3f0c1f;
+	overflow: hidden;
+}
+
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover{
+	box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-tile{
+	background: url("../images/menu-tile.jpg") no-repeat;
+	background-position: center;
+}
+
+#specials-tile{
+	background: url("../images/specials-tile.jpg") no-repeat;
+	background-position: center;
+}
+
+#menu-tile span, #specials-tile span, #map-tile span{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	text-align: center;
+	font-size: 1.6em;
+	text-transform: uppercase;
+	background-color: #000;
+	color: #fff;
+	opacity: .8;
+}
+
+/*FOOTER*/
+.card-footer{
+	color: white;
+	margin-top: 30px;
+	padding-top: 35px;
+	padding-bottom: 30px;
+	background-color: #222;
+	border-top: 0;
+}
+.panel-footer div.row{
+	margin-bottom: 35px;
+}
+#hours, #address{
+	line-height: 2;
+}
+#hours > span, #address > span{
+	font-size: 1.3em;
+}
+#address p{
+	color: #557c3e;
+	font-size: .8em;
+	line-height: 1.8;
+}
+#testimonials{
+	font-style: italic;
+}
+#testimonials p:nth-child(2){
+	margin-top: 25px;
+}
+/*END OF FOOTER*/
+
 /*For Large Devices*/
 @media (min-width: 1200px){
-
+	.jumbotron{
+		background: url("../images/jumbotron_1200.jpg") no-repeat;
+		height: 675px;
+	}
 }
 /*For Medium Size Devices*/
 @media (min-width: 992px) and (max-width: 1199px){
@@ -80,14 +166,64 @@ body{
 	.navbar-brand h1{
 	font-size: 1.4em !important;
 }
+	.jumbotron{
+		background: url("../images/jumbotron_992.jpg") no-repeat;
+		height: 550px;
+	}
 }
 /*For Small Size Devices*/
 @media (min-width: 768px) and (max-width: 991px){
 	.navbar-brand h1{
 	font-size: 35px !important;
 	}
+	#phone{
+	position: relative;
+	left: 73%;
+	}
+	.jumbotron{
+		background: url("../images/jumbotron_768.jpg") no-repeat;
+		height: 432px;
+	}
 }
 /*For Extra Small Devices*/
 @media (max-width: 767px){
+	#call-btn{
+		text-align: center;
+	}
+	#call-btn a span{
+		background-color: rgb(246,179,25);
+		width: 100%;
+		text-decoration: none;
+		color: #61122f;
+		padding: 20px 20px;
 
+		font-size: 24px;
+		border: 2px solid white;
+		border-radius: 6px;
+	}
+	#call-btn div{
+		color: white;
+		font-size: 13px;
+		text-transform: uppercase;
+	}
+	.jumbotron{
+		margin-top: 30px;
+		padding: 0;
+
+	}
+	#menu-tile, #specials-tile{
+		width: 360px;
+		margin:0 auto 15px;
+	}
+	.card-footer section{
+		margin-bottom: 30px;
+		text-align: center;
+	}
+	.card-footer section:nth-child(3){
+		margin-bottom: 0;
+	}
+	.card-footer section hr{
+		width: 50%;
+		border-bottom: 1px solid white;
+	}
 }
